--- a/html/collection.html
+++ b/html/collection.html
@@ -1,3 +1,5 @@
+<p>This is a list of all the current collection implementations of the library. While the categorization is more deliberate in its context, the purpose of an implementation may differ from the categorization-context. For example, Hot Wheels, Gran Turismo, and Matchbox are all related to cars, with two being from the toy category and another in the games category. The purpose of all three however are primarily for access to car images. Matchbox mainly serves civilian cars, Hot Wheels serves fantasy cars, Gran Turismo serves realistic cars. It took 3 datasets to serve the most functional case of car references since commercial car data from multiple makes is anything but unified.</p>
+
 <table class="generaltable">
         <tr>
                 <th>Name</th>
@@ -8,21 +10,21 @@
         </tr>
         <tr>
                 <td>Anilist</td>
-                <td></td>
+                <td>Summaries for historical as well as new anime and manga.</td>
                 <td>Media</td>
                 <td><a href="https://docs.anilist.co/" target="_blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>Art Institute of Chicago</td>
-                <td></td>
+                <td>Museum access.</td>
                 <td>Art</td>
                 <td><a href="https://www.artic.edu/open-access/public-api" target="_blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>Gobots</td>
-                <td></td>
+                <td>Box art and images of transforming toys from the 80's.</td>
                 <td>Toys</td>
                 <td>
                         <a href="https://gbwiki.shoutwiki.com/wiki/Main_Page" target="_blank">Link</a><br>
@@ -32,163 +34,163 @@
         </tr>
         <tr>
                 <td>Gunpla</td>
-                <td></td>
+                <td>Box art and product images of model kits.</td>
                 <td>Toys</td>
                 <td><a href="https://gunpla.fandom.com/wiki/Gunplapedia" target="_blank"></a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>Giphy</td>
-                <td></td>
+                <td>Animated gifs.</td>
                 <td>Media</td>
                 <td><a href="https://developers.giphy.com/" target="_blank"></a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>Gran Turismo</td>
-                <td></td>
+                <td>Realistic reference images for cars.</td>
                 <td>Games</td>
                 <td><a href="https://gran-turismo.fandom.com/wiki/Gran_Turismo_Wiki" target="blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>Louvre</td>
-                <td></td>
+                <td>Museum access.</td>
                 <td>Art</td>
                 <td><a href="https://collections.louvre.fr/en/page/documentationJSON" target="blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>Project Gutenberg</td>
-                <td></td>
+                <td>Old literature.</td>
                 <td>Literature</td>
-                <td></td>
+                <td><a href="https://www.gutenberg.org/" target="blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>Harvard Art Museums</td>
-                <td></td>
+                <td>Museum access.</td>
                 <td>Art</td>
-                <td></td>
+                <td><a href="https://harvardartmuseums.org/collections/api" target="blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>Hot Wheels</td>
-                <td></td>
+                <td>Fantasy/cartoon reference images for cars.</td>
                 <td>Toys</td>
-                <td></td>
+                <td><a href="https://hotwheels.fandom.com/wiki/Hot_Wheels" target="blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>IGDB</td>
-                <td></td>
+                <td>Summaries, cover art, and screen-shots for historical and new video games.</td>
                 <td>Games</td>
-                <td></td>
+                <td><a href="https://api-docs.igdb.com/" target="blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>iNaturalist</td>
-                <td></td>
+                <td>Species photography.</td>
                 <td>Science</td>
-                <td></td>
+                <td><a href="https://api.inaturalist.org/v1/docs/" target="blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>Marvel Database</td>
-                <td></td>
+                <td>Fan written information on the Marvel comics, movies, characters, etc.</td>
                 <td>Media</td>
-                <td></td>
+                <td><a href="https://marvel.fandom.com/wiki/Marvel_Database" target="blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>Matchbox</td>
-                <td></td>
+                <td>Reference images for civilian cars.</td>
                 <td>Toys</td>
-                <td></td>
+                <td><a href="https://matchbox.fandom.com/wiki/Matchbox_Cars_Wiki" target="blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>MET Museum of Art</td>
-                <td></td>
+                <td>Museum access.</td>
                 <td>Art</td>
-                <td></td>
+                <td><a href="https://metmuseum.github.io/" target="blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>Music Theory</td>
-                <td></td>
+                <td>Visual music theory reference across 3 instruments.</td>
                 <td>Music</td>
-                <td></td>
+                <td><a href="https://github.com/tonaljs/tonal" target="blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>Nasa</td>
-                <td></td>
+                <td>A Picture of the Day archive and decades of media from the image/video libraries.</td>
                 <td>Science</td>
-                <td></td>
+                <td><a href="https://data.nasa.gov/" target="blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>Odin Sphere</td>
-                <td></td>
+                <td>Character art, game systems, fan written character profiles, and story bits about the game.</td>
                 <td>Games</td>
-                <td></td>
+                <td><a href="https://odinsphere.fandom.com/wiki/Odin_Sphere_Wiki" target="blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>Phish.in'</td>
-                <td></td>
+                <td>Listen to live Phish recordings.</td>
                 <td>Music</td>
-                <td></td>
+                <td><a href="https://phish.in/api-docs" target="blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>PoetryDB</td>
-                <td></td>
+                <td>A collection of poems.</td>
                 <td>Literature</td>
-                <td></td>
+                <td><a href="https://poetrydb.org/index.html" target="blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>PokéAPi</td>
-                <td></td>
+                <td>The national Pokédex.</td>
                 <td>Games</td>
-                <td></td>
+                <td><a href="https://pokeapi.co/" target="blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>Pokémon TCG</td>
-                <td></td>
+                <td>Card data and image repository for the Pokémon trading card game.</td>
                 <td>Games</td>
-                <td></td>
+                <td><a href="https://pokemontcg.io/" target="blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>Rebrickable</td>
-                <td></td>
+                <td>Official Lego set summaries with potential images and instructions for alternate builds.</td>
                 <td>Toys</td>
-                <td></td>
+                <td><a href="https://rebrickable.com/api/" target="blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>Scryfall</td>
-                <td></td>
+                <td>Card data and image repository for the Magic: the Gathering trading card game.</td>
                 <td>Games</td>
-                <td></td>
+                <td><a href="https://scryfall.com/docs/api" target="blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>The Smithsonian</td>
-                <td></td>
+                <td>Museum access.</td>
                 <td>Heritage</td>
-                <td></td>
+                <td><a href="https://www.si.edu/openaccess/devtools" target="blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>Te Papa</td>
-                <td></td>
+                <td>Learn about the culture of New Zealand.</td>
                 <td>Heritage</td>
-                <td></td>
+                <td><a href="" target="blank">Link</a></td>
                 <td></td>
         </tr>
 </table>
