--- a/html/collection.html
+++ b/html/collection.html
@@ -190,7 +190,7 @@
                 <td>Te Papa</td>
                 <td>Learn about the culture of New Zealand.</td>
                 <td>Heritage</td>
-                <td><a href="" target="blank">Link</a></td>
+                <td><a href="https://data.tepapa.govt.nz/docs/" target="blank">Link</a></td>
                 <td></td>
         </tr>
 </table>
