--- a/html/collection.html
+++ b/html/collection.html
@@ -36,14 +36,14 @@
                 <td>Gunpla</td>
                 <td>Box art and product images of model kits.</td>
                 <td>Toys</td>
-                <td><a href="https://gunpla.fandom.com/wiki/Gunplapedia" target="_blank"></a></td>
+                <td><a href="https://gunpla.fandom.com/wiki/Gunplapedia" target="_blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>Giphy</td>
                 <td>Animated gifs.</td>
                 <td>Media</td>
-                <td><a href="https://developers.giphy.com/" target="_blank"></a></td>
+                <td><a href="https://developers.giphy.com/" target="_blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
