--- a/html/solutions.html
+++ b/html/solutions.html
@@ -34,3 +34,7 @@
         Everyone is eligible for access to the library at any time. There are no accounts related to usage. This makes the visit less restrictive than a physical library where one needs a card for access. There are no commercial aspects to the site such as advertisements which cut away from the coziness of the design, which is one problem that the library is looking to address and not contribute to.
 </div>
 
+<div class="orbitron">Doing the right thing right now</div>
+<div class="m24">
+        The amount of underused libraries for web applications available today is rather large. We need not the future for what we can do right now. It's not hard to imagine such resources stay in the bin due to the fact that we undervalue our own output in favor of the media consolidation which harbors most of the world's attention; being the social-media applications whom all of the world are plugged into. The library stands as an establishment which offers everything that the world outside of academia does not do very freely, and that is be the best it can be at without turning people into products or having it cost them anything.
+</div>
