--- a/html/briefing.html
+++ b/html/briefing.html
@@ -5,6 +5,6 @@
 <div class="m24">
         <p>Datasets that are implemented into the library are limited only by data quality. Subject matter of all kinds are otherwise welcome and scouting for new data happens regularly during development. Quality refers to media-richness, adequate completeness, and reliable data-structure. These 3 pillars make any dataset adequate for implementation.</p>
 
-        <p class="mb">The library is meant to have breadth and abundance of knowledge, being an act of stewardship in the process of development and provider of information at grand-scale as a minimum.</p>
+        <p class="mb">The library is of breadth and abundance of knowledge, being an act of stewardship in the process of development, and provider of information at grand-scale as a minimum.</p>
 </div>
 
