--- a/html/solutions.html
+++ b/html/solutions.html
@@ -36,5 +36,5 @@
 
 <div class="orbitron">Doing the right thing right now.</div>
 <div class="m24">
-        The amount of underused libraries for web applications available today is rather large. We need not the future for what we can do right now. It's not hard to imagine such resources stay in the bin due to the fact that we undervalue our own output in favor of the media consolidation which harbors most of the world's attention; being the social-media applications whom all of the world are plugged into. The library stands as an establishment which offers everything that the world outside of academia does not do very freely, and that is be the best it can be at without turning people into products or having it cost them anything.
+        The amount of underused libraries for web applications available today is rather large. We need not the future for what we can do right now. It's not hard to imagine such resources stay in the bin due to the fact that we undervalue our own output in favor of the media consolidation which harbors most of the world's attention; being the social-media applications whom all of the world are plugged into. The library stands as an establishment which offers everything that the world outside of academia does not do very freely, and that is be the best that it can be without turning people into products or having it cost them anything.
 </div>
