--- a/html/solutions.html
+++ b/html/solutions.html
@@ -1,4 +1,4 @@
-<div class="orbitron">Quiet solutions and problems.</div>
+<div class="orbitron">Quiet solutions.</div>
 <div class="m24"> The library solves any problems that it can in the process of collecting, preserving, and presenting data for reference and research. Quiet solutions are more of what the library tends to lean into. Doing something differently doesn't necessarily solve a problem. It more accurately generates another solution.</div>
 
 <div class="orbitron">Organize the world's information in a way which makes it more immediately accessible to everyone in a cozy environment.</div>
