--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                                 <a href="javascript:void(0)" class="nounderline" data="solutions">Solutions</a>
                                 <a href="javascript:void(0)" class="nounderline" data="collection">Collection</a>
                                 <a href="javascript:void(0)" class="nounderline" data="creator">Creator</a>
+                                <a href="javascript:void(0)" class="nounderline" data="schemas/anilist">Anilist Schema</a>
                         </div>
                 </div>
                 <div class="flexcolumn table-scroll scrollbar" id="contentdata" style="flex:1;  padding:8px;">
