--- a/html/schemas/anilist.html
+++ b/html/schemas/anilist.html
@@ -1,5 +1,5 @@
 
-<table class="generaltable">
+<table class="generaltable no-scale">
     <thead>
         <tr>
             <th width="15%">Table Name</th>
