--- a/html/collection.html
+++ b/html/collection.html
@@ -13,7 +13,7 @@
                 <td>Summaries for historical as well as new anime and manga.</td>
                 <td>Media</td>
                 <td><a href="https://docs.anilist.co/" target="_blank">Link</a></td>
-                <td></td>
+                <td><a href="javascript:void(0)" class="schemalink" data="anilist">View</a></td>
         </tr>
         <tr>
                 <td>Art Institute of Chicago</td>
