--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
                 <div class="flexcolumn table-scroll scrollbar" id="contentdata" style="flex:1;  padding:8px;">
                         Welcome to the documentation of Internet Public Library. Use the Table of Contents to find your way.
                 </div>
+                <div class="flexcolumn table-scroll scrollbar" id="schemadata" style="flex:1;  padding:8px; display:none;">
+                        Schema data goes here.
+                </div>
         </div>
 </div>
 
