--- a/html/schemas/anilist.html
+++ b/html/schemas/anilist.html
@@ -1,4 +1,4 @@
-<div class="toggleButton returnlink mb">Return to Collection</div>
+<div class="toggleButton returnlink" style="margin-bottom:8px;">Return to Collection</div>
 <table class="generaltable no-scale">
     <thead>
         <tr>
