--- a/html/collection.html
+++ b/html/collection.html
@@ -20,7 +20,7 @@
                 <td>Museum access.</td>
                 <td>Art</td>
                 <td><a href="https://www.artic.edu/open-access/public-api" target="_blank">Link</a></td>
-                <td></td>
+                <td><a href="javascript:void(0)" class="schemalink" data="artic">View</a></td>
         </tr>
         <tr>
                 <td>Gobots</td>
