--- a/html/collection.html
+++ b/html/collection.html
@@ -1,6 +1,6 @@
 <p>This is a list of all the current collection implementations of the library. While the categorization is more deliberate in its context, the purpose of an implementation may differ from the categorization-context. For example, Hot Wheels, Gran Turismo, and Matchbox are all related to cars, with two being from the toy category and another in the games category. The purpose of all three however are primarily for access to car images. Matchbox mainly serves civilian cars, Hot Wheels serves fantasy cars, Gran Turismo serves realistic cars. It took 3 datasets to serve the most functional case of car references since commercial car data from multiple makes is anything but unified.</p>
 
-<table class="generaltable">
+<table class="generaltable no-scale">
         <tr>
                 <th>Name</th>
                 <th>Purpose</th>
