--- a/html/schemas/artic.html
+++ b/html/schemas/artic.html
@@ -1,5 +1,5 @@
 <div class="toggleButton returnlink" style="margin-bottom:8px;">Return to Collection</div>
-<table class="generaltable">
+<table class="generaltable no-scale">
     <thead>
         <tr>
             <th width="15%">Table Name</th>
