--- a/html/briefing.html
+++ b/html/briefing.html
@@ -1,10 +1,9 @@
-<div class="orbitron">What is the library?</div>
-<div class="m24">Internet Public Library is an online establishment for reference and research that is free for world to use. It presents abundant and organized information through stylized page design with visual cues taken from science-fiction. Information is retrieved from numerous organizations and counting, ranging anywhere from art institutions to fan-made wikis. The data is collected, organized, and presented in formatting that is made most efficient through bespoke layout considerations per implementation. Each dataset can potentially be very large with millions of records throughout the decades such as those found at The Smithsonian and Nasa.</div>
+<div class="orbitron">About the library.</div>
+<div class="m24">Internet Public Library is an online resource for reference and research that is free to use. It presents abundant, organized information through a science-fiction themed interface. Information is retrieved from numerous organizations, ranging anywhere from art institutions to fan-made wikis. The data is collected, re-organized, and presented with bespoke layout considerations per implementation in the html parsing which is nested in otherwise rather similar user interface panels throughout the whole site. A lot of times it serves the image reference hunter, sometimes it is a music player, sometimes it is a music theory application, but it is always an experience which can lead to learning. </div>
 
-<div class="orbitron">Subject matter and quality.</div>
+<div class="orbitron">Subject matter.</div>
 <div class="m24">
-        <p>Datasets that are implemented into the library are limited only by data quality. Subject matter of all kinds are otherwise welcome and scouting for new data happens regularly during development. Quality refers to media-richness, adequate completeness, and reliable data-structure. These 3 pillars make any dataset adequate for implementation.</p>
-
-        <p class="mb">The library is of breadth and abundance of knowledge, being an act of stewardship in the process of development, and provider of information at grand-scale as a minimum.</p>
+        <p class="mb">Datasets that are implemented into the library are limited only by data quality*.  Subject matter of all kinds are otherwise welcome and scouting for new data happens regularly during development.  The library is of breadth and abundance. Each dataset can potentially be very large with millions of records throughout the decades such as data from The Smithsonian and Nasa. </p>
+        <p class="mb">* : Quality data comes as media-rich, complete or adequately complete in record keeping, and reliable in its data-structure.</p>
 </div>
 
