--- a/html/briefing.html
+++ b/html/briefing.html
@@ -3,7 +3,7 @@
 
 <div class="orbitron">Subject matter.</div>
 <div class="m24">
-        <p class="mb">Datasets that are implemented into the library are limited only by data quality*.  Subject matter of all kinds are otherwise welcome and scouting for new data happens regularly during development.  The library is of breadth and abundance. Each dataset can potentially be very large with millions of records throughout the decades such as data from The Smithsonian and Nasa. </p>
-        <p class="mb">* : Quality data comes as media-rich, complete or adequately complete in record keeping, and reliable in its data-structure.</p>
+        <p >Datasets that are implemented into the library are limited only by data quality<span style="color:rgb(72, 255, 0);">*</span>.  Subject matter of all kinds are otherwise welcome and scouting for new data happens regularly during development.  The library is of breadth and abundance. Each dataset can potentially be very large with millions of records throughout the decades such as data from The Smithsonian and Nasa. </p>
+        <p class="mb"><span style="color:rgb(72, 255, 0);">*</span> : Quality data comes as media-rich, complete or adequately complete in record keeping, and reliable in its data-structure.</p>
 </div>
 
