--- a/html/briefing.html
+++ b/html/briefing.html
@@ -1,9 +1,19 @@
 <div class="orbitron">About the library.</div>
-<div class="m24">Internet Public Library is an online resource for reference and research that is free to use. It presents abundant, organized information through a science-fiction themed interface. Information is retrieved from numerous organizations, ranging anywhere from art institutions to fan-made wikis. The data is collected, re-organized, and presented with bespoke layout considerations per implementation in the html parsing which is nested in otherwise rather similar user interface panels throughout the whole site. A lot of times it serves the image reference hunter, sometimes it is a music player, sometimes it is a music theory application, but it is always an experience which can lead to learning. </div>
+<div class="m24">
+        The Internet Public Library is a free, web-based research and reference platform that consolidates structured information from a wide range of external sources—including public APIs, cultural institutions, and community-maintained wikis. The system ingests heterogeneous data, reorganizes it, and renders it through a single page application. 
+        <ul>
+                <li>For artists, it provides high-quality visual references.</li>
+
+                <li>For musicians, it offers playback utilities and theory tools.</li>
+
+                <li>For general use, it enables exploration of curated datasets across media, culture, and science.</li>
+        </ul>
+        Due to the nature of the library's structured data, its use serves to reduce the amount of chaos in reference seeking by adding on opportunities for learning more about what is being looked at through said data.
+</div>
 
 <div class="orbitron">Subject matter.</div>
 <div class="m24">
-        <p >Datasets that are implemented into the library are limited only by data quality<span style="color:rgb(72, 255, 0);">*</span>.  Subject matter of all kinds are otherwise welcome and scouting for new data happens regularly during development.  The library is of breadth and abundance. Each dataset can potentially be very large with millions of records throughout the decades such as data from The Smithsonian and Nasa. </p>
+        <p >Datasets that are implemented into the library are limited only by data quality<span style="color:rgb(72, 255, 0);">*</span>.  Subject matter of all kinds are otherwise welcome and scouting for new data happens regularly during development. Each dataset can potentially be very large, documenting millions of records throughout the decades such as data from The Smithsonian and Nasa. It is beautiful to be able to bring forward the world's buried information and make it more easily accessible.</p>
         <p class="mb"><span style="color:rgb(72, 255, 0);">*</span> : Quality data comes as media-rich, complete or adequately complete in record keeping, and reliable in its data-structure.</p>
 </div>
 
