--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="tocbox flexcolumn">
                         <div class="orbitron">Table of Contents</div>
                         <div class="flexcolumn" style="margin:8px;">
-                                <a href="javascript:void(0)" class="nounderline" data="briefing">Briefing</a>
+                                <a href="javascript:void(0)" class="nounderline" data="briefing">Summary</a>
                                 <a href="javascript:void(0)" class="nounderline" data="solutions">Solutions</a>
                                 <a href="javascript:void(0)" class="nounderline" data="collection">Collection</a>
                                 <a href="javascript:void(0)" class="nounderline" data="creator">Creator</a>
