--- a/html/briefing.html
+++ b/html/briefing.html
@@ -8,7 +8,7 @@
 
                 <li>For general use, it enables exploration of curated datasets across media, culture, and science.</li>
         </ul>
-        Due to the nature of the library's structured data, its use serves to reduce the amount of chaos in reference seeking by adding on opportunities for learning more about what is being looked at through said data.
+        With the library's structured data, its use serves to reduce the amount of chaos in reference seeking by adding on opportunities for learning more about what is being looked at through said data.
 </div>
 
 <div class="orbitron">Subject matter.</div>
