--- a/html/briefing.html
+++ b/html/briefing.html
@@ -1,6 +1,6 @@
 <div class="orbitron">About the library.</div>
 <div class="m24">
-        The Internet Public Library is a free, web-based research and reference platform that consolidates structured information from a wide range of external sources—including public APIs, cultural institutions, and community-maintained wikis. The system ingests heterogeneous data, reorganizes it, and renders it through a single page application. 
+        The Internet Public Library is a free, web-based research and reference platform that consolidates structured information from a wide range of external sources which include public APIs, cultural institutions, and community-maintained wikis. The system ingests heterogeneous data, reorganizes it, and renders it through a single page application. 
         <ul>
                 <li>For artists, it provides high-quality visual references.</li>
 
@@ -11,9 +11,16 @@
         With the library's structured data, its use serves to reduce the amount of chaos in reference seeking by adding on opportunities for learning more about what is being looked at through said data.
 </div>
 
-<div class="orbitron">Subject matter.</div>
-<div class="m24">
-        <p >Datasets that are implemented into the library are limited only by data quality<span style="color:rgb(72, 255, 0);">*</span>.  Subject matter of all kinds are otherwise welcome and scouting for new data happens regularly during development. Each dataset can potentially be very large, documenting millions of records throughout the decades such as data from The Smithsonian and Nasa. It is beautiful to be able to bring forward the world's buried information and make it more easily accessible.</p>
-        <p class="mb"><span style="color:rgb(72, 255, 0);">*</span> : Quality data comes as media-rich, complete or adequately complete in record keeping, and reliable in its data-structure.</p>
+<div class="orbitron">Subject Matter</div>
+
+<div class="m24"> 
+        <p>Datasets integrated into the library are limited only by their <strong>data quality</strong><span style="color:rgb(72, 255, 0);">*</span>. Beyond that standard, subject matter of any kind is welcome. New sources are continually evaluated and incorporated during development. Some datasets are exceptionally large—spanning millions of records collected over decades—such as those from the Smithsonian or NASA. The library presents records in a way which surfaces the world’s buried information and increases access to it.</p> 
+        
+        <p class="mb"><span style="color:rgb(72, 255, 0);">*</span> High-quality data is media-rich, complete or sufficiently complete in its metadata, and consistent in its structure.</p> 
 </div>
 
+<div class="orbitron">Layout Considerations</div> 
+<div class="m24"> 
+        <p>Each dataset in the library is presented through a consistent two to three-panel layout: left column, main panel, and a potential third panel. This familiar structure provides a stable interface while still allowing each implementation to adapt to the unique qualities of its data source. For example, an art-museum dataset may use the left column for filtering options and the right panel for browsing results. A dataset derived from a MediaWiki source may instead use the left column as a table of contents (which does not exist in Wiki sites), with the right panel dedicated to the article data. In cases where both filtering and hierarchical navigation are required, a third panel is added for query results. This system allows the library to accommodate a wide range of data structures while maintaining an overall sense of familiarity.</p>
+        <p></p> 
+</div>
