--- a/html/briefing.html
+++ b/html/briefing.html
@@ -8,7 +8,7 @@
 
                 <li>For general use, it enables exploration of curated datasets across media, culture, and science.</li>
         </ul>
-        With the library's structured data, its use serves to reduce the amount of chaos in reference seeking by adding on opportunities for learning more about what is being looked at through said data.
+        With the library's structured data, its use serves to reduce the amount of chaos in reference seeking by adding on opportunities for learning more about what is being looked at through said data. This makes browsing the library more meaningful when used in place of a platform such as Pinterest, although its job is not to replace them since every place has something that another does not. On the other hand, with the library in existence, it increases the chances of users having context for visual studies. References are stressed in the world of illustration, but rarely the context of the references. Even under general use, anyone can benefit from object context.
 </div>
 
 <div class="orbitron">Subject Matter</div>
