--- a/html/briefing.html
+++ b/html/briefing.html
@@ -1,4 +1,4 @@
-<div class="orbitron">About the library.</div>
+<div class="orbitron">About the Library.</div>
 <div class="m24">
         The Internet Public Library is a free, web-based research and reference platform that consolidates structured information from a wide range of external sources which include public APIs, cultural institutions, and community-maintained wikis. The system ingests heterogeneous data, reorganizes it, and renders it through a single page application. 
         <ul>
@@ -14,7 +14,7 @@
 <div class="orbitron">Subject Matter</div>
 
 <div class="m24"> 
-        <p>Datasets integrated into the library are limited only by their <strong>data quality</strong><span style="color:rgb(72, 255, 0);">*</span> and data-use restrictions. Subject matter of any kind is otherwise welcome. At the time of writing, there are over 20 fully implemented datasets running across the domains of art, games, literature, media, music, science, and toys. New sources are continually evaluated and incorporated during development. Some datasets are exceptionally large—spanning millions of records collected over decades—such as those from the Smithsonian or NASA. The library presents records in a way which surfaces the world’s buried information and increases access to it.</p> 
+        <p>Datasets integrated into the library are limited only by their <strong>data-quality</strong><span style="color:rgb(72, 255, 0);">*</span> and data-use restrictions. Subject matter of any kind is otherwise welcome. At the time of writing, there are over 20 fully implemented datasets running across the domains of art, games, literature, media, music, science, and toys. New sources are continually evaluated and incorporated during development. Some datasets are exceptionally large, spanning millions of records collected over decades such as those from the Smithsonian or NASA. The library presents records in a way which surfaces the world’s buried information and increases access to it.</p> 
         
         <p class="mb"><span style="color:rgb(72, 255, 0);">*</span> High-quality data is media-rich, complete or sufficiently complete in its metadata, and consistent in its structure.</p> 
 </div>
