--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <!-- Canonical URL -->
         <link rel="canonical" href="https://thedreamstrata.com">
         
-        <!-- Favicon -->
-        <link rel="icon" href="favicon.ico" type="image/x-icon">
+        <!-- Favicon 
+        <link rel="icon" href="favicon.ico" type="image/x-icon">-->
         
         <script src="js/jquery/jquery.js"></script>
         <!-- Stylesheet -->
@@ -36,11 +36,14 @@
         </div>
         <div class="flexrowplain" style="height:100%;">
                 <div class="tocbox flexcolumn">
-                        <div class="orbitron">Table of Contents</div>
+                        <div class="orbitron">Overview</div>
                         <div class="flexcolumn" style="margin:8px;">
                                 <a href="javascript:void(0)" class="nounderline" data="briefing">Summary</a>
-                                <a href="javascript:void(0)" class="nounderline" data="solutions">Solutions</a>
                                 <a href="javascript:void(0)" class="nounderline" data="collection">Collection</a>
+                        </div>
+
+                        <div class="orbitron">Background</div>
+                        <div class="flexcolumn" style="margin:8px;">
                                 <a href="javascript:void(0)" class="nounderline" data="creator">Creator</a>
                         </div>
                 </div>
